analysis.txt
python :   File "<string>", line 13
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 13:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'{t[" title\]}
               ^
SyntaxError: unterminated string literal (detected at line 13)
